Bug fix for visibility state -- when a step is invisible, it should reset state

--- a/src/components/BuilderProcess.css
+++ b/src/components/BuilderProcess.css
@@ -6,16 +6,22 @@
     width: 50%;
 }
 
-.builder-character-sheet {
-    width: 50%;
-    margin-left: 1em;
-}
-
 .builder-process > div > .step {
     border: 1px solid #000;
     border-radius: 4px;
     padding: 1em;
     margin: 0.5em 0;
+}
+
+.builder-character-sheet {
+    width: 50%;
+    margin-left: 1em;
+}
+
+.builder-character-sheet .title {
+    font-weight: bold;
+    font-size: 125%;
+    margin-top: 1em;
 }
 
 /* Ryuutama */
